# src/routes/users.ts
@@ -3,6 +3,7 @@ import UsersController from '../controllers/UsersController';
 import AuthorizationMiddleware from '../middlewares/authorization.middleware';
 import ValidationMiddleware from '../middlewares/validation.middleware';
 import { ChangePasswordSchema, UpdateInfoSchema } from '../schemas/users.schema';
+import { FiltersSchema } from '../schemas/global.schema';
 
 const router = Router();
 
@@ -13,6 +14,8 @@ router.put('/', ValidationMiddleware(UpdateInfoSchema), UsersController.UpdateIn
 router.delete('/', UsersController.Destroy);
 
 router.get('/me', UsersController.Me);
+
+router.get('/report', ValidationMiddleware(FiltersSchema), UsersController.Report);
 
 router.put('/change-password', ValidationMiddleware(ChangePasswordSchema), UsersController.ChangePassword);
 
